# APC

./: .gitmodules  CMakeLists.txt  build.py  main.cpp
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/apc/testapplication/: APCLib.java  GL2JNIView.java  MainActivity.java
android/lib/: build.gradle
android/lib/src/main/: AndroidManifest.xml
android/lib/src/main/cpp/: CMakeLists.txt
android/lib/src/main/cpp/apc_jni/: CMakeLists.txt  main.cpp
android/lib/src/main/res/values/: strings.xml
android_build/: .project  settings.gradle
android_build/app/: settings.gradle
android_build/app/app/: build.gradle  local.properties
android_build/app/app/src/main/: AndroidManifest.xml
android_build/app/app/src/main/cpp/: AndroidSo.cpp
android_build/app/app/src/main/java/com/apc/testapplication/: APCLib.java  GL2JNIView.java  MainActivity.java
android_build/app/app/src/main/libs/AndroidSo/include/base/: context.h
android_build/lib/: build.gradle
android_build/lib/src/main/cpp/: CMakeLists.txt
android_build/lib/src/main/cpp/include/core/: game.h  utility.h
android_build/lib/src/main/cpp/source/: AndroidSo.cpp
android_build/lib/src/main/cpp/source/base/: gl_renderer.cpp
build_system/: module.py  module_manager.py  utils.py
build_system/modules/: android.py  pc.py
glfw/: CMakeLists.txt  main.cpp
include/base/: context.h  gl_renderer.h
include/core/: context.h  game.h  renderer.h
source/base/: context.cpp  game.cpp  gl_renderer.cpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/apc/: clickable_area.h  component.h  context.h  coord.h  file_loader.h  game.h  line.h  log.h  math.h  matrix.h  polygon.h  renderer.h  resource_manager.h  scene.h  scene_impl.h  scene_manager.h  scene_object.h  signal.h  sprite.h  texture.h  transform.h  vertex_batching.h
src/core/include/apc/components/: clickable.h  drawable.h  screen_sensative.h
src/core/source/: clickable_area.cpp  color.cpp  component.cpp  context.cpp  game.cpp  line.cpp  math.cpp  math_utils.cpp  polygon.cpp  scene_impl.cpp  scene_manager.cpp  scene_object.cpp  sprite.cpp  texture.cpp  transform.cpp  vertex_batching.cpp
src/include/base/: context.h  drawable_impl.h  gl.h  gl_renderer.h  resource_manager.h  scene.h  scene_manager_impl.h  sprite.h  transform_impl.h
src/include/base/resources/: gl_texture.h  image.h
src/include/core/: clickable_area.h  color.h  component.h  context.h  coord.h  drawable.h  file_loader.h  game.h  game_config.h  line.h  log.h  matrix.h  render_node.h  renderer.h  resource_manager.h  scene.h  scene_manager.h  scene_object.h  specialization_check.h  transform.h  utility.h
src/include/core/components/: clickable.h  drawable.h  screen_sensative.h  updatable.h
src/opengl_impl/: CMakeLists.txt
src/opengl_impl/include/apc/opengl/: gl.h  gl_renderer.h  scene.h  sprite.h
src/opengl_impl/include/apc/opengl/resources/: gl_texture.h  image.h
src/opengl_impl/source/: gl_renderer.cpp  scene.cpp  sprite.cpp
src/opengl_impl/source/resources/: gl_texture.cpp  image.cpp
src/source/base/: context.cpp  drawable_impl.cpp  gl_renderer.cpp  resource_manager.cpp  scene.cpp  scene_manager_impl.cpp  sprite.cpp  transform_impl.cpp
src/source/base/resources/: gl_texture.cpp  image.cpp
src/source/core/: clickable_area.cpp  color.cpp  component.cpp  coord.cpp  game.cpp  line.cpp  matrix.cpp  render_node.cpp  scene_object.cpp  transform.cpp
test_game/: CMakeLists.txt
test_game/include/: test_game.h
test_game/include/components/: afro.h
test_game/source/: test_game.cpp
test_game/source/components/: afro.cpp
